# library-dual

./: .clang-format  CMakeLists.txt  PR_DESCRIPTION.md  README.md
.github/workflows/: cmake-multi-platform.yml
include/: dual.hpp
include/dual/: array.hpp  functional.hpp  number.hpp  operations.hpp
include/dual/functional/: apply.hpp  concat.hpp  foreach.hpp  product.hpp  summation.hpp  transform.hpp  view.hpp  zip.hpp
include/dual/helpers/: indices.hpp  operations.hpp  print.hpp
include/dual/operations/: cos.hpp  divides.hpp  exp.hpp  log.hpp  minus.hpp  multiplies.hpp  negate.hpp  plus.hpp  pow.hpp  sin.hpp  sqrt.hpp  unary_minus.hpp
tests/: CMakeLists.txt  bug_fixes_test.cpp  operations_cos_test.cpp  operations_divides_test.cpp  operations_exp_test.cpp  operations_log_test.cpp  operations_minus_test.cpp  operations_multiplies_test.cpp  operations_negate_test.cpp  operations_plus_test.cpp  operations_pow_test.cpp  operations_sin_test.cpp  operations_sqrt_test.cpp  operations_unary_minus_test.cpp
